--- a/CrayCray/res/values/strings.xml
+++ b/CrayCray/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Cray Cray</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="feed">Feed horse!</string>
 
 </resources>
