first release, with a button for feeding craycray and a textview for displaying how much craycray is fed

--- a/CrayCray/res/values/strings.xml
+++ b/CrayCray/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Cray Cray</string>
     <string name="action_settings">Settings</string>
-    <string name="feed">Feed horse!</string>
+    <string name="feed">Feed CrayCray!</string>
 
 </resources>
