--- a/CrayCray/res/values/strings.xml
+++ b/CrayCray/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="feed">Feed</string>
     <string name="clean">Clean</string>
     <string name="cuddle">Cuddle</string>
+    <string name="title_activity_game_over_dialog">GameOverDialog</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
