--- a/CrayCray/res/values/strings.xml
+++ b/CrayCray/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="energy">Energy</string>
     <string name="removePoo">RemovePoo</string>
     <string name="title_activity_game_over_dialog">GameOverDialog</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="russian_roulette">Russian Roulette</string>
+    <string name="title_activity_russian">RussianActivity</string>
 
 </resources>
