--- a/CrayCray/res/values/strings.xml
+++ b/CrayCray/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_game_over_dialog">GameOverDialog</string>
     <string name="russian_roulette">Russian Roulette</string>
     <string name="title_activity_russian">RussianActivity</string>
+    <string name="fire">Fire Gun!</string>
 
 </resources>
