DrinkHappyPotion works except CrayCray-expression

--- a/CrayCray/res/values/strings.xml
+++ b/CrayCray/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="russian_roulette">Russian Roulette</string>
     <string name="title_activity_russian">RussianActivity</string>
     <string name="fire">Fire Gun!</string>
+    <string name="happy_potion">GET DRUNK</string>
 
 </resources>
